--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -2,3 +2,6 @@ set-option -g prefix C-z
 unbind-key C-b
 bind-key C-z send-prefix
 set-window-option -g mode-keys vi
+bind c new-window -c "#{pane_current_path}"
+bind % split-window -c "#{pane_current_path}" -h
+bind '"' split-window -c "#{pane_current_path}" -h
