--- a/dot.tmux.conf
+++ b/dot.tmux.conf
@@ -4,4 +4,4 @@ bind-key C-z send-prefix
 set-window-option -g mode-keys vi
 bind c new-window -c "#{pane_current_path}"
 bind % split-window -c "#{pane_current_path}" -h
-bind '"' split-window -c "#{pane_current_path}" -h
+bind '"' split-window -c "#{pane_current_path}"
